# Auto-reservation

./: .gitignore  README.md  airdo_reserve.py  airdo_scraper.py  build.sh  initial_setup.sh  main.spec  pyproject.toml  requirements.txt  update_library.sh
.github/: dependabot.yml
.github/workflows/: auto_merge.yml  pytest.yml
docs/Playwright/: locator_playwright.md
src/: airdo_reserve.py  airdo_reserve_playwright.py  main.py
src/config/: Env.py  EnvConfig.py
src/enums/: AirportCode.py  FlightDirection.py
src/pages/: FlightSelectionPage.py  InputCustomerInfoPage.py
src/pages/airdo/: flight_selection_page.py  reservation_form_page.py  search_page.py
src/utils/: driver_manager.py  retry.py  screenshot_manager.py
tests/: conftest.py  test_airdo_reserve_playwright.py  test_retry.py
